Merging Unlocking Infos in the GUI